--- a/src/app/Modules/home/home.component.scss
+++ b/src/app/Modules/home/home.component.scss
@@ -26,48 +26,8 @@
     max-width: 1440px;
     margin: 0 auto;
 }
-.container__h {
-    .swiper {
-        @include wihi(100%, 30rem);
-    }
-    .container__head {
-        width: 100%;
-    }
-    .swiper-slide {
-        text-align: top;
-        background: $color_white;
-        display: flex;
-        justify-content: flex-start;
-        align-items: top;
-    }
 
-    .swiper-slide img {
-        display: block;
-        @include wihi(100%, 100%);
-        object-fit: cover;
-    }
-}
-.container__head {
-    background: url("../../../assets/img-home/Rectangle\ 1.png") 0 0 no-repeat;
-    background-size: 100% 100%;
-    max-width: 95%;
-    margin: $pt auto;
-    display: flex;
-    justify-content: space-between;
-}
-.container__title {
-    margin: 5rem;
-    h1 {
-        @include font(Montserrat, normal, 800, 3rem, 120%, 0em, #404040);
-    }
-    p {
-        @include font(Montserrat, normal, 500, 1.8rem, 150%, 0em, #404040);
-        padding: 3rem 0;
-    }
-}
-.container__logo {
-    padding-right: 15rem;
-}
+
 
 .container__banner {
     margin: 4rem auto;
@@ -90,14 +50,14 @@
 }
 
 .title {
-    @include font(Montserrat, normal, 700, $pt, 120%, 0em, #404040);
+    @include font(Montserrat, normal, 700, $pt, 120%, 0em, $color_4);
     margin: 3rem 0 $pt 3rem;
 }
 .container__linking {
-    @include font(Montserrat, normal, normal, 1.2rem, 150%, 0em, #404040);
+    @include font(Montserrat, normal, normal, 1.2rem, 150%, 0em, $color_4);
     margin-left: 3rem;
     &:hover {
-        color: #ff5d7d;
+        color: $color_3;
     }
 }
 
@@ -130,23 +90,23 @@
             margin-top: $pb;
             font-size: $pb;
             line-height: 150%;
-            color: #b4b4b4;
+            color: $color_5;
         }
     }
 }
 h6 {
-    @include font(Montserrat, normal, 500, 1.2rem, 150%, 0em, #404040);
+    @include font(Montserrat, normal, 500, 1.2rem, 150%, 0em, $color_4);
     width: 15rem;
     text-align: center;
 }
 .container__beauties {
-    @include font(Montserrat, normal, 700, $pt, 120%, 0em, #404040);
+    @include font(Montserrat, normal, 700, $pt, 120%, 0em, $color_4);
     width: 90%;
     margin: 5rem auto 3rem;
 }
 .container__items {
     width: 90%;
-    margin: 0 8rem;
+    margin: 0 4.5rem;
     flex-wrap: wrap;
 }
 .container__wrap {
@@ -155,7 +115,7 @@ h6 {
 }
 .container__item {
     @include wihi(18rem, 28rem);
-    border: 1px solid #e7e7e7;
+    border: 1px solid $color_6;
     box-sizing: border-box;
     border-radius: 10px;
     padding-bottom: $pb;
@@ -166,11 +126,11 @@ h6 {
         margin: $pw;
     }
     h5 {
-        @include font(Montserrat, normal, 700, $pw, 120%, 0em, #404040);
+        @include font(Montserrat, normal, 700, $pw, 120%, 0em, $color_4);
         margin: 0 $pw;
     }
     & > p {
-        @include font(Montserrat, normal, 700, $pw, 120%, 0em, #404040);
+        @include font(Montserrat, normal, 700, $pw, 120%, 0em, $color_4);
         margin: 0 $pw;
         position: absolute;
         top: 25rem;
@@ -180,7 +140,7 @@ h6 {
     }
 }
 .opacity {
-    @include font(Montserrat, normal, 500, $pb, 150%, 0em, #b4b4b4);
+    @include font(Montserrat, normal, 500, $pb, 150%, 0em, $color_5);
     margin: 0 $pw;
     text-align: left;
 }
@@ -198,7 +158,7 @@ h6 {
         justify-content: center;
         align-items: center;
         @include wihi(15rem, 4rem);
-        background: #5e9e5e;
+        background: $color_10;
         border-radius: 10px;
         margin: 8rem auto 0;
         img {
@@ -216,12 +176,12 @@ h6 {
     display: block;
     @include wihi(18rem, 4rem);
     margin: 0 auto 6rem;
-    border: 1px solid #5e9e5e;
+    border: 1px solid $color_10;
     border-radius: 10px;
     background-color: $color_white;
 
     p {
-        @include font(Montserrat, normal, 600, 1.2rem, 110%, 0.05em, #5e9e5e);
+        @include font(Montserrat, normal, 600, 1.2rem, 110%, 0.05em, $color_10);
         text-transform: uppercase;
         margin: 0 auto;
     }
@@ -230,30 +190,19 @@ h6 {
     width: 90%;
     margin: 0 auto;
     p {
-        @include font(Montserrat, normal, normal, 1.2rem, 170%, 0em, #404040);
+        @include font(Montserrat, normal, normal, 1.2rem, 170%, 0em, $color_4);
     }
 }
 .color {
     font-weight: bold;
     font-size: 2.5rem;
     line-height: 110%;
-    background: linear-gradient(90deg, #ff5d7d 0%, #7b61ff 100%);
+    background: $color_13;
     background-clip: text;
     -webkit-text-fill-color: transparent;
     margin-bottom: 2rem;
 }
-@media (max-width: 1665px) {
-    .container__head {
-        justify-content: flex-start;
-    }
-    .container__logo {
-        padding-right: $pb;
-    }
-    .container__title {
-        margin-left: 5rem;
-        width: 25rem;
-    }
-}
+
 @media (max-width: 1415px) {
     .title {
         margin-left: $pb !important;
@@ -274,18 +223,7 @@ h6 {
         margin-bottom: 3rem;
     }
 }
-@media (max-width: 1150px) {
-    .container__logo {
-        @include wihi(80%, 100%);
-        img {
-            @include wihi(80%, 80%);
-        }
-    }
-    .container__title {
-        margin-left: 5rem;
-        width: 20rem;
-    }
-}
+
 @media (max-width: 970px) {
     .container__banner {
         display: block !important;
@@ -303,63 +241,29 @@ h6 {
         min-width: 25rem;
     }
 }
-@media (max-width: 920px) {
-    .container__logo {
-        @include wihi(60%, 80%);
-    }
-}
+
 @media (max-width: 820px) {
     .container__items {
-        width: 100%;
-        margin: 0 4rem !important;
+        margin: 0 2rem !important;
         flex-wrap: wrap;
     }
     .container__wrap {
-        flex: 1 0 50% !important;
+        flex: 1 0 17rem !important;
         margin-bottom: 3rem;
     }
-    .container__logo {
-        @include wihi(40%, 60%);
-    }
-    .container__title {
-        margin-left: 3rem;
-        width: 15rem;
-    }
+    
 }
 @media (max-width: 710px) {
     .container__items {
-        width: 100%;
         margin: 0 $pb !important;
         display: block !important;
     }
     .container__wrap {
         margin-bottom: 3rem !important;
     }
-    .container__head {
-        display: block;
-        height: 30rem;
-    }
-    .container__logo {
-        position: relative;
-        @include wihi(20rem, 50%);
-        left: 12rem;
-        bottom: 13rem;
-        z-index: 3;
-    }
-    .container__title {
-        margin-top: $pb;
-        margin-left: $pt;
-        width: 10rem;
-        h1 {
-            width: 30rem;
-        }
-        p {
-            padding: $pb 0;
-            width: 10rem;
-        }
-    }
+   
     .container__item > p {
-        @include font(Montserrat, normal, bold, $pw, 120%, 0em, #404040);
+        @include font(Montserrat, normal, bold, $pw, 120%, 0em, $color_4);
         margin: 0 $pw;
         position: static !important;
         top: 0 !important;
@@ -378,7 +282,7 @@ h6 {
             justify-content: center;
             align-items: center;
             @include wihi(15rem, 4rem);
-            background: #5e9e5e;
+            background: $color_10;
             border-radius: 10px;
             margin: 0 1rem;
             img {
@@ -401,7 +305,7 @@ h6 {
             justify-content: center;
             align-items: center;
             @include wihi(15rem, 4rem);
-            background: #5e9e5e;
+            background: $color_10;
             border-radius: 10px;
             margin: 0 1rem !important;
             img {
@@ -415,64 +319,35 @@ h6 {
         }
     }
 }
-@media (max-width: 560px) {
-    .container__logo {
-        width: 65%;
-        left: 10rem;
-        img {
-            width: 50%;
-        }
-    }
-    .container__title {
-        h1 {
-            width: 25rem;
-        }
-        p {
-            width: 8rem;
-        }
-    }
-}
+
 @media (max-width: 500px) {
-    .container__head {
-        width: 30rem;
-    }
-    .container__logo {
-        width: 60%;
-        left: 12rem;
-        margin-right: 0;
-        img {
-            width: 50%;
-        }
-    }
-    .container__title {
-        h1 {
-            width: 23rem;
-        }
-        p {
-            width: 7rem;
-        }
-    }
-}
-@media (max-width: 450px) {
     .container__banner {
+        margin-left: 0;
+    }
+    
+    .container__delivery,
+    .container__garden {
+        min-width: 22rem;
+    }
+    .container__gardens,
+    .container__deliverys {
+        padding-left: 1rem;
+    }
+    .container__linking {
         margin-left: 0 !important;
     }
-    .container__logo {
-        @include wihi(60%, 12rem);
-        left: 10rem;
-        position: relative;
-        margin-right: 0;
-        img {
-            width: 50%;
-        }
+    .delivery__logo,
+    .garden__logo {
+        width: 25rem !important;
     }
-    .container__title {
-        h1 {
-            width: 21rem;
-        }
-        p {
-            width: 7rem;
-            margin-right: 0;
-        }
+    #delivery-image,
+    #garden-image {
+        width: 100%;
     }
+    .title {
+        margin-left: 0 !important;
+    }
+
+    
 }
+
