--- a/src/app/Modules/news/news.component.scss
+++ b/src/app/Modules/news/news.component.scss
@@ -10,7 +10,7 @@
     margin: 0 auto;
 }
 .container__line {
-    background: #404040;
+    background: $color_4;
     opacity: 0.2;
     height: 1px;
 }
@@ -21,7 +21,7 @@
 .container__home {
     margin-right: 2rem;
     a {
-        @include font(Montserrat, normal, normal, 1rem, 150%, 0em, #404040);
+        @include font(Montserrat, normal, normal, 1rem, 150%, 0em, $color_4);
     }
 }
 .container__angle {
@@ -29,10 +29,10 @@
     margin-top: 0.35rem;
 }
 .container__news {
-    @include font(Montserrat, normal, normal, 1rem, 150%, 0em, #bdbdbd);
+    @include font(Montserrat, normal, normal, 1rem, 150%, 0em, $color_14);
 }
 .container__titl {
-    background: linear-gradient(90deg, #ff5d7d 0%, #7b61ff 100%);
+    background: $color_13;
     background-clip: text;
     -webkit-text-fill-color: transparent;
     font-weight: 800;
@@ -45,69 +45,64 @@
     margin-top: 1rem;
     margin-bottom: 3rem;
     width: 75%;
-    @include font(Montserrat, normal, normal, 1.6rem, 150%, 0em, #000);
+    @include font(Montserrat, normal, normal, 1.6rem, 150%, 0em, $color_black);
 }
 .container__text {
     margin-top: 1rem;
     margin-bottom: 3rem;
     width: 75%;
-    @include font(Montserrat, normal, normal, 1.6rem, 150%, 0em, #404040);
+    @include font(Montserrat, normal, normal, 1.6rem, 150%, 0em, $color_4);
 }
 .container__banner {
     margin: 4rem auto;
-    max-width: 100%;
+    max-width: 90%;
 }
 .container__delivery {
     background: url("../../../assets/img-home/Rectangle\ 3.png") 0 0 no-repeat;
     background-size: 100% 100%;
-    width: 50%;
-}
-
-.delivery__logo {
-    display: flex;
-    align-items: center;
-}
-.delivery__logo img {
-    height: 90%;
-    padding-left: 6.2rem;
-}
-.title {
-    @include font(Montserrat, normal, bold, 2rem, 120%, 0em, #404040);
-    margin: 4rem 0 2rem 4rem;
-}
-.container__linking {
-    @include font(Montserrat, normal, normal, 1.2rem, 150%, 0em, #404040);
-    margin-left: 4rem;
-    &:hover {
-        color: #ff5d7d;
-    }
-}
-
-.container__garden {
-    background: url("../../../assets/img-home/Rectangle\ 4.png") 0 0 no-repeat;
-    background-size: 100% 100%;
     width: 100%;
-    margin-left: 1rem;
+    margin-right: 0.5rem;
 }
 
+.delivery__logo,
 .garden__logo {
     display: flex;
     align-items: center;
 }
+.garden__logo img {
+    height: 90%;
+}
 
+.title {
+    @include font(Montserrat, normal, 700, $pt, 120%, 0em, $color_4);
+    margin: 3rem 0 $pt 3rem;
+}
+.container__linking {
+    @include font(Montserrat, normal, normal, 1.2rem, 150%, 0em, $color_4);
+    margin-left: 3rem;
+    &:hover {
+        color: $color_3;
+    }
+}
+.container__garden {
+    background: url("../../../assets/img-home/Rectangle\ 4.png") 0 0 no-repeat;
+    background-size: 100% 100%;
+    width: 100%;
+    margin-left: 0.5rem;
+}
 .container__titles {
     margin: 0.5rem auto 0.5rem;
-    @include font(Montserrat, normal, bold, 2rem, 120%, 0em, #404040);
+    @include font(Montserrat, normal, bold, 2rem, 120%, 0em, $color_4);
 }
 .container__date {
     margin-bottom: 1rem;
     width: 75%;
-    @include font(Montserrat, normal, normal, 1.6rem, 150%, 0em, #404040);
+    @include font(Montserrat, normal, normal, 1.6rem, 150%, 0em, $color_4);
 }
 .my-pag::ng-deep .ngx-pagination .current {
-    color: #404040;
-    border: 1px solid red;
-    background: #fff;
+    color: $color_4;
+    border: 1px solid $color_3;
+    background: $color_white;
 }
 .my-pag::ng-deep .ngx-pagination li {
     width: 3rem;
@@ -124,19 +119,19 @@
     text-align: center;
     letter-spacing: 0.05em;
     text-transform: uppercase;
-    color: #404040;
+    color: $color_4;
 }
 .my-pag::ng-deep .ngx-pagination li {
     a {
         border-radius: 10px;
-        border: 1px solid grey;
+        border: 1px solid $color_5;
         width: 3rem;
         height: 3rem;
-        background-color: #fff;
+        background-color: $color_white;
         box-sizing: border-box;
     }
     a:hover {
-        border: 1px solid red;
+        border: 1px solid $color_3;
         border-radius: 10px;
     }
 }
@@ -154,3 +149,4 @@
         width: 100%;
     }
 }
+
