--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -44,16 +44,16 @@
     width: 25%;
 }
 .header__list li a {
-    @include font(Montserrat, normal, 600, 1.4rem, 150%, 0.05em, black);
+    @include font(Montserrat, normal, 600, 1.4rem, 150%, 0.05em, $color_4);
     text-transform: uppercase;
     &.active {
-        color: red;
+        color: $color_3;
         background: url("../../assets/img-home/Rectangle2.png") center bottom no-repeat;
         background-size: 3.2rem 0.4rem;
         padding-bottom: $pb;
     }
     &:hover {
-        color: red;
+        color: $color_3;
         background: url("../../assets/img-home/Rectangle2.png") center bottom no-repeat;
         background-size: 3.2rem 0.4rem;
         padding-bottom: $pb;
@@ -99,7 +99,7 @@
     line-height: 50%;
     vertical-align: top;
     font-size: $pb;
-    background-color: rgba(255, 93, 125, 1);
+    background-color: $color_3;
 }
 .header__user {
     background: url("../../assets/img-home/user.png") 0 0.4rem no-repeat;
@@ -117,23 +117,22 @@
     background-color: $color_white;
     width: 25rem;
     margin: 2rem;
-    box-shadow: 4px 4px 6px 2px grey;
+    box-shadow: 0px 10px 25px rgba(0, 0, 0, 0.1);
     li {
         margin: 2rem 2rem;
     }
     .user__text {
-        @include font(Montserrat, normal, 600, 1.5rem, 120%, 0.05em, black);
+        @include font(Montserrat, normal, 600, 1.5rem, 110%, 0.05em, $color_4);
     }
     .line {
         width: 100%;
         height: 1px;
-        background-color: rgb(221, 218, 218);
-        box-shadow: 1px 1px 1px 1px grey;
+        background-color: $color_6;
     }
     .user__number {
         display: inline-block;
         margin-left: 2rem;
-        background-color: rgba(255, 93, 125, 1);
+        background-color: $color_3;
         width: 2.5rem;
         height: 2.5rem;
         border-radius: 30%;
@@ -141,7 +140,7 @@
         position: relative;
         bottom: 0.1rem;
         span {
-            @include font(Montserrat, normal, 600, 1.5rem, 120%, 0.05em, $color_white);
+            @include font(Montserrat, normal, 600, 1.5rem, 110%, 0.05em, $color_white);
             display: block;
             padding-top: 0.4rem;
         }
@@ -195,25 +194,25 @@
             background-color: $color_white;
         }
         .burger:hover {
-            box-shadow: 2px 2px 3px grey;
+            box-shadow: 2px 2px 3px $color_5;
         }
         .burger:active {
             position: fixed;
             top: 2.6rem;
             left: 2.6rem;
-            box-shadow: 1px 1px 2px grey;
+            box-shadow: 1px 1px 2px $color_5;
         }
         .close {
             background-color: $color_white;
         }
         .close:hover {
-            box-shadow: 2px 2px 3px grey;
+            box-shadow: 2px 2px 3px $color_5;
         }
         .close:active {
             position: fixed;
             top: 2.6rem;
             left: 2.6rem;
-            box-shadow: 1px 1px 2px grey;
+            box-shadow: 1px 1px 2px $color_5;
         }
     }
     .mobile__menu {
@@ -230,11 +229,11 @@
             margin-bottom: 4rem;
         }
         & li a {
-            @include font(Montserrat, normal, 600, 1.4rem, 150%, 0.05em, #404040);
+            @include font(Montserrat, normal, 600, 1.4rem, 150%, 0.05em, $color_4);
             text-transform: uppercase;
         }
         & li a:hover {
-            color: #ff5d7d;
+            color: $color_3;
         }
     }
 }
@@ -293,13 +292,13 @@
         position: fixed;
         top: 2.6rem;
         left: 0.5rem !important;
-        box-shadow: 1px 1px 2px grey;
+        box-shadow: 1px 1px 2px $color_5;
     }
     .close:active {
         position: fixed;
         top: 2.6rem;
         left: 0.5rem !important;
-        box-shadow: 1px 1px 2px grey;
+        box-shadow: 1px 1px 2px $color_5;
     }
     .header__logo {
         margin-left: $pt;
@@ -308,9 +307,7 @@
     .header {
         padding-right: 5rem;
     }
-    .header__menu {
-        padding-right: 5rem;
-    }
+
     .header__icon {
         display: flex;
         justify-content: center !important;
@@ -367,5 +364,9 @@
         margin-right: $pt;
         width: 11rem;
         padding-right: 0;
+    }
+    .header {
+        position: fixed;
+        z-index: 99;
     }
 }
