--- a/src/app/styles/_variables.scss
+++ b/src/app/styles/_variables.scss
@@ -6,6 +6,21 @@ $pb: 1rem;
 $pt: 2rem;
 $pw: 1.5rem;
 $color_white: #fff;
+$color_black: #000;
+$color_1: #ff9eb1;
+$color_2: #d1aee5;
+$color_3: #ff5d7d;
+$color_4: #404040;
+$color_5: #b4b4b4;
+$color_6: #e7e7e7;
+$color_7: #f5f5f5;
+$color_8: #fafafa;
+$color_9: #b4dd7f;
+$color_10: #5e9e5e;
+$color_11: #f2a559;
+$color_12: #d18754;
+$color_13: linear-gradient(90deg, #ff5d7d 0%, #7b61ff 100%);
+$color_14: #bdbdbd;
 %width {
     width: 2rem;
     height: 3rem;
