create banners module

--- a/src/app/Modules/home/home.component.html
+++ b/src/app/Modules/home/home.component.html
@@ -1,26 +1,7 @@
 <div class="wrapper">
     <div class="container">
-        <app-swiper-logo></app-swiper-logo>
-        <div class="container__banner flex justify-content-between ">
-            <a href="https://www.elinext.com" target="_blank" class="container__delivery flex justify-content-between">
-                <div class="container__deliverys">
-                    <p class=" title">Flower delivery in Minsk</p>
-                    <p><a class="container__linking" href="">More details</a></p>
-                </div>
-                <div class="delivery__logo">
-                    <img id="delivery-image" src="../../../assets/img-home/car.jpg" alt="car">
-                </div>
-            </a>
-            <a href="https://www.elinext.com" target="_blank" class="container__garden flex justify-content-between">
-                <div class="container__gardens ">
-                    <p class=" title">Everything for your garden</p>
-                    <p><a class="container__linking" href="">Discounts up to 50%</a></p>
-                </div>
-                <div class="garden__logo">
-                    <img id="garden-image" src="../../../assets/img-home/FRa.png" alt="garden">
-                </div>
-            </a>
-        </div>
+        <app-home-swiper-logo></app-home-swiper-logo>
+        <app-banners></app-banners>
         <div class="container__slider">
             <ul class="container__list flex justify-content-between">
                 <swiper [slidesPerView]="6" [spaceBetween]="20" [loop]="true" [pagination]="{
