--- a/src/app/Modules/home/swiper-logo/swiper-logo.component.html
+++ b/src/app/Modules/home/swiper-logo/swiper-logo.component.html
@@ -6,10 +6,10 @@
     clickable: true
   }" [navigation]="false" class="myswiper">
         <ng-template swiperSlide>
-            <app-slider-logo></app-slider-logo>
+            <app-home-slider-logo></app-home-slider-logo>
         </ng-template>
         <ng-template swiperSlide>
-            <app-slider-logo></app-slider-logo>
+            <app-home-slider-logo></app-home-slider-logo>
         </ng-template>
     </swiper>
 </div>
