--- a/src/app/Modules/home/swiper-logo/swiper-logo.component.scss
+++ b/src/app/Modules/home/swiper-logo/swiper-logo.component.scss
@@ -2,9 +2,9 @@
 @import "../../../styles/_variables.scss";
 @import "../../../styles/_mixins.scss";
 
-app-slider-logo{
-    width:100%;
-    height:30rem;
+app-home-slider-logo {
+    width: 100%;
+    height: 30rem;
 }
 .container__h {
     .swiper {
