--- a/src/app/Modules/aboutus/aboutus.component.scss
+++ b/src/app/Modules/aboutus/aboutus.component.scss
@@ -94,6 +94,7 @@
     margin-bottom: 2.5rem;
 }
 .container__list {
+    margin-left: 0;
     li {
         @include font(Montserrat, normal, normal, 1.6rem, 170%, 0em, $color_4);
         padding-left: 8rem;
@@ -150,5 +151,10 @@
         li {
             padding-left: 5rem;
         }
+    }
+}
+@media (max-width: 450px) {
+    .wrapper {
+        margin-top: 8rem;
     }
 }
