--- a/src/app/Modules/news/newsarticle/newsarticle.component.html
+++ b/src/app/Modules/news/newsarticle/newsarticle.component.html
@@ -42,35 +42,6 @@
         <p class="container__text">For several years now, our company has been delighting customers with the delivery of
             flowers and congratulations. We are really proud of the clear and well-coordinated work of our employees and
             are always confident that your order will be delivered at the right time to the right place.</p>
-        <div class="container__banner flex justify-content-between ">
-
-            <div class="container__delivery flex  ">
-                <a href="https://www.elinext.com" target="_blank" class="flex justify-content-between">
-                    <div>
-                        <div class="container__deliverys title">
-                            Flower delivery in Minsk
-                        </div>
-                        <a class="container__linking" href="">More details</a>
-                    </div>
-                    <div class="delivery__logo">
-                        <img src="../../../assets/img-home/car.jpg" alt="car">
-                    </div>
-                </a>
-            </div>
-
-            <a href="https://www.elinext.com" target="_blank">
-                <div class="container__garden flex justify-content-between">
-                    <div>
-                        <div class="container__gardens title">
-                            Everything for your garden
-                        </div>
-                        <a class="container__linking" href="">Discounts up to 50%</a>
-                    </div>
-                    <div class="garden__logo">
-                        <img src="../../../assets/img-home/Frame 11.png" alt="garden">
-                    </div>
-                </div>
-            </a>
-        </div>
+        <app-banners></app-banners>
     </div>
 </div>
