--- a/src/app/Modules/news/newsarticle/newsarticle.component.scss
+++ b/src/app/Modules/news/newsarticle/newsarticle.component.scss
@@ -6,18 +6,20 @@
     margin: 0 auto;
 }
 .container {
-    width: 90%;
+    width: 100%;
     margin: 0 auto;
 }
 .container__line {
+    width: 90%;
+    margin: 0 auto;
     background: $color_4;
     opacity: 0.2;
     height: 1px;
 }
 .container__path {
     margin: 2rem auto;
+    width: 90%;
 }
-
 .container__home {
     margin-right: 2rem;
     a {
@@ -38,6 +40,8 @@
     color: $color_14;
 }
 .container__titl {
+    width: 90%;
+    margin: 0 auto;
     background: $color_13;
     background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -48,8 +52,8 @@
     margin-bottom: 2.5rem;
 }
 .container__text {
-    margin-top: 3rem;
-    margin-bottom: 4rem;
+    width: 90%;
+    margin: 3rem 5% 4rem;
     width: 75%;
     font-weight: normal;
     font-size: 1.6rem;
@@ -57,7 +61,7 @@
     color: $color_black;
 }
 .container__text1 {
-    margin-bottom: 2rem;
+    margin: 0 5% 2rem;
     width: 75%;
     font-weight: normal;
     font-size: 1.5rem;
@@ -65,73 +69,31 @@
     color: $color_4;
 }
 .container__img1 {
-    margin-bottom: 4rem;
+    width: 90%;
+    margin: 0 auto 4rem;
     img {
         width: 100%;
     }
 }
 .container__img3 {
-    margin-top: 4rem;
-    margin-bottom: 4rem;
+    margin: 4rem 0 4rem 5%;
     img {
         width: 75%;
     }
 }
-.container__banner {
-    margin: 4rem auto;
-    max-width: 100%;
-}
-.container__delivery {
-    background: url("../../../../assets/img-home/Rectangle\ 3.png") 0 0 no-repeat;
-    background-size: 100% 100%;
-    width: 50%;
-}
-
-.delivery__logo {
-    display: flex;
-    align-items: center;
-}
-.delivery__logo img {
-    height: 90%;
-    padding-left: 6.2rem;
-}
-.title {
-    font-weight: bold;
-    font-size: 2rem;
-    line-height: 120%;
-    color: $color_4;
-    margin: 4rem 0 2rem 4rem;
-}
-.container__linking {
-    font-weight: normal;
-    font-size: 1.2rem;
-    line-height: 150%;
-    color: $color_4;
-    margin-left: 4rem;
-    &:hover {
-        color: $color_3;
-    }
-}
-
-.container__garden {
-    background: url("../../../../assets/img-home/Rectangle\ 4.png") 0 0 no-repeat;
-    background-size: 100% 100%;
-    width: 100%;
-    margin-left: 1rem;
-}
-
-.garden__logo {
-    display: flex;
-    align-items: center;
-}
 @media (max-width: 1200px) {
     .container__text,
     .container__text1 {
-        width: 100%;
+        width: 90%;
     }
     .container__img3 {
         img {
-            width: 100%;
+            width: 90%;
         }
+    }
+}
+@media (max-width: 450px) {
+    .wrapper {
+        margin-top: 8rem;
     }
 }
