create item,swiper components, debuging html & css shortcomings

--- a/src/app/Modules/aboutus/aboutus.component.html
+++ b/src/app/Modules/aboutus/aboutus.component.html
@@ -3,7 +3,7 @@
         <div class="container__line"></div>
         <div class="container__path flex justify-content-start">
             <div class="container__home">
-                <a routerLink="/">Home</a>
+                <a class="container__link" routerLink="/">Home</a>
             </div>
             <div class="container__angle">
                 <img src="../../../assets/img-aboutus/Angle.png" alt="angle">
@@ -12,15 +12,18 @@
         </div>
         <div class="container__titl">About us</div>
         <div class="container__img1">
-            <img src="../../../assets/img-aboutus/image 255.jpg" alt="flowers">
+            <img class="image-flowers" src="../../../assets/img-aboutus/image 255.jpg" alt="flowers">
         </div>
         <p class="container__text1">For several years now, our company has been delighting customers with the delivery
             of flowers and congratulations. We are really proud of the clear and well-coordinated work of our employees
             and are always confident that your order will be delivered at the right time to the right place.</p>
         <div class="container__flowers flex justify-content-between">
-            <div><img src="../../../assets/img-aboutus/image 3.1png.png" alt="flower1"></div>
-            <div><img src="../../../assets/img-aboutus/image 4.1.png" alt="flower2"></div>
-            <div><img src="../../../assets/img-aboutus/image 5.1.png" alt="flower3"></div>
+            <div class="container__picture"><img class="image-flower" src="../../../assets/img-aboutus/image 3.1png.png"
+                    alt="flower1"></div>
+            <div class="container__picture"><img class="image-flower" src="../../../assets/img-aboutus/image 4.1.png"
+                    alt="flower2"></div>
+            <div class="container__picture"><img class="image-flower" src="../../../assets/img-aboutus/image 5.1.png"
+                    alt="flower3"></div>
         </div>
         <p class="container__figcapture">Examples of our work</p>
         <p class="container__text2">We always know where your order is located, at any time it can be tracked thanks to
@@ -30,20 +33,24 @@
             And our reputation is growing every day thanks to constant feedback from grateful customers who have used
             our services.</p>
         <div class="container__img2">
-            <img src="../../../assets/img-aboutus/image 256.jpg" alt="flowers">
+            <img class="image-flowers" src="../../../assets/img-aboutus/image 256.jpg" alt="flowers">
         </div>
         <div class="container__advantages">
             <div class="container__title2">
                 Our advantages
             </div>
             <ul class="container__list">
-                <li>All the flowers that you see on the site are available. The flowers are updated very often and we
+                <li class="container__li">All the flowers that you see on the site are available. The flowers are
+                    updated very often and we
                     guarantee that the flowers you choose will be fresh. The site is updated every day.</li>
-                <li>You can see live photos of bouquets in the hands of girls. This will help you understand what a
+                <li class="container__li">You can see live photos of bouquets in the hands of girls. This will help you
+                    understand what a
                     bouquet looks like, what number and size of flowers you need.</li>
-                <li>We do not limit you in the number of flowers in one bouquet. You can also choose different flowers
+                <li class="container__li">We do not limit you in the number of flowers in one bouquet. You can also
+                    choose different flowers
                     in one bouquet.</li>
-                <li>Our prices do not differ from the prices in various flower shops, and in most cases even lower than
+                <li class="container__li">Our prices do not differ from the prices in various flower shops, and in most
+                    cases even lower than
                     them. But you don't have to go anywhere. We will deliver it to you, and at the same time we will
                     provide a very wide selection.</li>
             </ul>
