--- a/src/app/Modules/home/slider-logo/slider-logo.component.html
+++ b/src/app/Modules/home/slider-logo/slider-logo.component.html
@@ -1,7 +1,7 @@
 <div class="container__head  ">
     <div class="container__title">
-        <h1>Bouquets for your holidays!</h1>
-        <p>Just like in the picture!</p>
+        <h1 class="h1">Bouquets for your holidays!</h1>
+        <p class="container__paragraph">Just like in the picture!</p>
     </div>
     <div class="container__logo">
         <img class="event" src="../../../../assets/img-home/flowers.jpg" alt="flowers">
