--- a/src/app/Modules/news/newsarticle/newsarticle.component.html
+++ b/src/app/Modules/news/newsarticle/newsarticle.component.html
@@ -9,7 +9,7 @@
                 <img src="../../../../assets/img-aboutus/Angle.png" alt="angle">
             </div>
             <div class="container__home">
-                <a routerLink="/news">News</a>
+                <a class="container__link" routerLink="/news">News</a>
             </div>
             <div class="container__angle">
                 <img src="../../../../assets/img-aboutus/Angle.png" alt="angle">
@@ -21,7 +21,7 @@
             flowers and congratulations. We are really proud of the clear and well-coordinated work of our employees and
             are always confident that your order will be delivered at the right time to the right place.</p>
         <div class="container__img1">
-            <img src="../../../../assets/img-news/image 258.jpg" alt="delivery">
+            <img id="imgDelivery" src="../../../../assets/img-news/image 258.jpg" alt="delivery">
         </div>
         <p class="container__text1">Flowers can and should be given not only for holidays, but also for no reason. And
             flowers with delivery are convenient, fast and reliable. In our online store, you can order stunning
@@ -37,7 +37,7 @@
             and requirements, and we will deliver it for free in Minsk and the Minsk district: Central, Sovetsky,
             Pervomaysky, Partizansky, Zavodsky, Leninsky, Oktyabrsky, Moskovsky, Frunzensky.</p>
         <div class="container__img3">
-            <img src="../../../../assets/img-news/image 259.jpg" alt="women">
+            <img id="imgWoman" src="../../../../assets/img-news/image 259.jpg" alt="women">
         </div>
         <p class="container__text">For several years now, our company has been delighting customers with the delivery of
             flowers and congratulations. We are really proud of the clear and well-coordinated work of our employees and
