--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,7 +1,7 @@
 <div class="wrapper">
     <footer class="footer">
         <div class="footer__flex flex justify-content-between">
-            <div class="footer__logo"><img src="../assets/img-home/FlowerShop.png" alt="logo"></div>
+            <div class="footer__logo"><img id="logo-image" src="../assets/img-home/FlowerShop.png" alt="logo"></div>
             <div class="footer__catalog">
                 <p class="footer__title">Catalog</p>
                 <ul class="footer__list flex justify-content-between">
