--- a/src/app/Modules/home/home.component.html
+++ b/src/app/Modules/home/home.component.html
@@ -2,207 +2,28 @@
     <div class="container">
         <app-home-swiper-logo></app-home-swiper-logo>
         <app-banners></app-banners>
-        <div class="container__slider">
-            <ul class="container__list flex justify-content-between">
-                <swiper [slidesPerView]="6" [spaceBetween]="20" [loop]="true" [pagination]="{
-          clickable: true
-        }" [navigation]="true" [breakpoints]="{
-            '200': {
-                slidesPerView: 1,
-                spaceBetween: 20
-              },
-            '450': {
-                slidesPerView: 2,
-                spaceBetween: 20
-              },
-            '640': {
-              slidesPerView: 2,
-              spaceBetween: 20
-            },
-            '880': {
-              slidesPerView: 4,
-              spaceBetween: 20
-            },
-            '1400': {
-              slidesPerView: 6,
-              spaceBetween: 20
-            }
-          }" class="myswiper">
-                    <ng-template swiperSlide>
-                        <div class="container__block flex justify-content-center">
-                            <a href="">
-                                <img src="../../../assets/img-home/logo.jpg" alt="logo1">
-                                <h6>Fresh flowers</h6>
-                                <p>from 17,35 eur.</p>
-                            </a>
-                        </div>
-                    </ng-template>
-                    <ng-template swiperSlide>
-                        <div class="container__block flex justify-content-center">
-                            <a href="">
-                                <img src="../../../assets/img-home/plant 1.png" alt="plant">
-                                <h6>Indoor plants</h6>
-                                <p>from 9,45 eur.</p>
-                            </a>
-                        </div>
-                    </ng-template>
-                    <ng-template swiperSlide>
-                        <div class="container__block flex justify-content-center">
-                            <a href="">
-                                <img src="../../../assets/img-home/sprout 1.png" alt="sprout">
-                                <h6>Planting material</h6>
-                                <p>more than 500 species</p>
-                            </a>
-                        </div>
-                    </ng-template>
-                    <ng-template swiperSlide>
-                        <div class="container__block flex justify-content-center">
-                            <a href="">
-                                <img src="../../../assets/img-home/vase 1.png" alt="vase">
-                                <h6>Floral accessories</h6>
-                                <p>more than 500 species</p>
-                            </a>
-                        </div>
-                    </ng-template>
-                    <ng-template swiperSlide>
-                        <div class="container__block flex justify-content-center">
-                            <a href="">
-                                <img src="../../../assets/img-home/bonsai 1.png" alt="bonsai">
-                                <h6>Compositions made of artificial materials...</h6>
-                                <p>for home comfort</p>
-                            </a>
-                        </div>
-                    </ng-template>
-                    <ng-template swiperSlide>
-                        <div class="container__block flex justify-content-center">
-                            <a href="">
-                                <img src="../../../assets/img-home/fountain 1.png" alt="fontain">
-                                <h6>Landscape design</h6>
-                                <p>for your garden</p>
-                            </a>
-                        </div>
-                    </ng-template>
-                </swiper>
-            </ul>
-        </div>
+        <app-home-swiper-list></app-home-swiper-list>
         <div class="container__beauties">
             Look at the these beauties!
         </div>
-        <div class="container__items flex ">
-            <div class="container__wrap">
-                <div class="container__item">
-                    <img src="../../../assets/img-home/image 1.png" alt="img1">
-                    <h5>Bouquet 117 (21 gerberas)</h5>
-                    <h6 class="opacity">Fresh flowers</h6>
-                    <p>Not in stock</p>
-                    <button>
-                        <img src="../../../assets/img-home/button-bag.png" alt="baggy">
-                        <p>ADD TO CART</p>
-                    </button>
-                </div>
-            </div>
-            <div class="container__wrap">
-                <div class="container__item activity">
-                    <img src="../../../assets/img-home/image 2.png" alt="img2">
-                    <h5>You’re Precious Bonquet</h5>
-                    <h6 class="opacity">Fresh flowers</h6>
-                    <p>€83.49 EUR</p>
-                    <button>
-                        <img src="../../../assets/img-home/button-bag.png" alt="baggy">
-                        <p>ADD TO CART</p>
-                    </button>
-                </div>
-            </div>
-            <div class="container__wrap">
-                <div class="container__item">
-                    <img src="../../../assets/img-home/image 3.png" alt="img3">
-                    <h5>Smiles and Sunshine</h5>
-                    <h6 class="opacity">Fresh flowers</h6>
-                    <p>€22.47 EUR</p>
-                    <button>
-                        <img src="../../../assets/img-home/button-bag.png" alt="baggy">
-                        <p>ADD TO CART</p>
-                    </button>
-                </div>
-            </div>
-            <div class="container__wrap">
-                <div class="container__item">
-                    <img src="../../../assets/img-home/image 4 .png" alt="img4">
-                    <h5>Light of my Life</h5>
-                    <h6 class="opacity">Fresh flowers</h6>
-                    <p>€62.17 EUR</p>
-                    <button>
-                        <img src="../../../assets/img-home/button-bag.png" alt="baggy">
-                        <p>ADD TO CART</p>
-                    </button>
-                </div>
-            </div>
-            <div class="container__wrap">
-                <div class="container__item">
-                    <img src="../../../assets/img-home/image 5.png" alt="img5">
-                    <h5>Summer in the Cape</h5>
-                    <h6 class="opacity">Fresh flowers</h6>
-                    <p>€65.56 EUR</p>
-                    <button>
-                        <img src="../../../assets/img-home/button-bag.png" alt="baggy">
-                        <p>ADD TO CART</p>
-                    </button>
-                </div>
-            </div>
-            <div class="container__wrap">
-                <div class="container__item">
-                    <img src="../../../assets/img-home/image 6.png" alt="img6">
-                    <h5>Smooth Sailing</h5>
-                    <h6 class="opacity">Fresh flowers</h6>
-                    <p>€83.49 EUR</p>
-                    <button>
-                        <img src="../../../assets/img-home/button-bag.png" alt="baggy">
-                        <p>ADD TO CART</p>
-                    </button>
-                </div>
-            </div>
-            <div class="container__wrap">
-                <div class="container__item">
-                    <img src="../../../assets/img-home/image 7.png" alt="img7">
-                    <h5>Life’s Peach</h5>
-                    <h6 class="opacity">Fresh flowers</h6>
-                    <p>€110.13 EUR</p>
-                    <button>
-                        <img src="../../../assets/img-home/button-bag.png" alt="baggy">
-                        <p>ADD TO CART</p>
-                    </button>
-                </div>
-            </div>
-            <div class="container__wrap">
-                <div class="container__item">
-                    <img src="../../../assets/img-home/image 8.png" alt="img8">
-                    <h5>Bouquet 117 (21 gerberas)</h5>
-                    <h6 class="opacity">Fresh flowers</h6>
-                    <p>€60.04 EUR</p>
-                    <button>
-                        <img src="../../../assets/img-home/button-bag.png" alt="baggy">
-                        <p>ADD TO CART</p>
-                    </button>
-                </div>
-            </div>
-        </div>
-
+        <app-home-items></app-home-items>
         <button class="container__button">
-            <p>Browse catalog</p>
+            <p class="container__parag">Browse catalog</p>
         </button>
-
         <div class="container__information">
             <h2 class="color">
                 Flower delivery in Minsk
             </h2>
-            <p>Flowers can and should be given not only for holidays, but also for no reason. And flowers with
+            <p class="container__paragraph">Flowers can and should be given not only for holidays, but also for no
+                reason. And flowers with
                 delivery
                 are convenient, fast and reliable. In our online store, you can order stunning bouquets for your
                 home or
                 office, which can not fail to impress. We will deliver them to any convenient point in Minsk. If
                 desired, the bouquet is supplemented with a postcard, the text of which is chosen by the client.
             </p>
-            <p>Flower delivery Minsk is a service that is very popular in the Republic of Belarus. You can order a
+            <p class="container__paragraph">Flower delivery Minsk is a service that is very popular in the Republic of
+                Belarus. You can order a
                 ready-made composition or a thematic bouquet for a birthday, name day, wedding, anniversary,
                 congratulations and other occasions. Roses (peony, bush), tulips, daisies, lilies, orchids,
                 chrysanthemums, gerberas, alstroemeria, irises, peonies, eustomas, carnations are only a part of
@@ -214,5 +35,4 @@
                 Frunzensky.</p>
         </div>
     </div>
-
 </div>
