--- a/src/app/Modules/home/home.component.scss
+++ b/src/app/Modules/home/home.component.scss
@@ -2,135 +2,15 @@
 @import "../../styles/_variables.scss";
 @import "../../styles/_mixins.scss";
 
-.swiper {
-    @include wihi(100%, 14rem);
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.swiper-slide {
-    text-align: top;
-    background: $color_white;
-    display: flex;
-    justify-content: center;
-    align-items: top;
-}
-
-.swiper-slide img {
-    display: block;
-    @include wihi(100%, 100%);
-    object-fit: cover;
-}
-
 .wrapper {
     max-width: 1440px;
     margin: 0 auto;
-}
-
-.container__list {
-    width: 90%;
-    margin: 0 auto;
-}
-.container__block {
-    @include wihi(15rem, 10rem);
-    margin-right: 0;
-    & a {
-        max-height: 100%;
-        width: 15rem;
-        display: block;
-
-        & img {
-            @include wihi(5rem, 5rem);
-            display: block;
-            margin: $pw auto;
-        }
-        & p {
-            text-align: center;
-            margin-top: $pb;
-            font-size: $pb;
-            line-height: 150%;
-            color: $color_5;
-        }
-    }
-}
-h6 {
-    @include font(Montserrat, normal, 500, 1.2rem, 150%, 0em, $color_4);
-    width: 15rem;
-    text-align: center;
 }
 .container__beauties {
     @include font(Montserrat, normal, 700, $pt, 120%, 0em, $color_4);
     width: 90%;
     margin: 5rem auto 3rem;
 }
-.container__items {
-    width: 90%;
-    margin: 0 4.5rem;
-    flex-wrap: wrap;
-}
-.container__wrap {
-    flex: 1 0 21%;
-    margin-bottom: 3rem;
-}
-.container__item {
-    @include wihi(18rem, 28rem);
-    border: 1px solid $color_6;
-    box-sizing: border-box;
-    border-radius: 10px;
-    padding-bottom: $pb;
-    position: relative;
-
-    img {
-        width: 80%;
-        margin: $pw;
-    }
-    h5 {
-        @include font(Montserrat, normal, 700, $pw, 120%, 0em, $color_4);
-        margin: 0 $pw;
-    }
-    & > p {
-        @include font(Montserrat, normal, 700, $pw, 120%, 0em, $color_4);
-        margin: 0 $pw;
-        position: absolute;
-        top: 25rem;
-    }
-    button {
-        display: none;
-    }
-}
-.opacity {
-    @include font(Montserrat, normal, 500, $pb, 150%, 0em, $color_5);
-    margin: 0 $pw;
-    text-align: left;
-}
-.container__item:hover {
-    transition: 1s;
-    @include wihi(18rem, 35rem);
-    position: absolute;
-    z-index: 2;
-    background-color: $color_white;
-    box-sizing: border-box;
-    box-shadow: 0px 10px 25px rgba(0, 0, 0, 0.1);
-    button {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        @include wihi(15rem, 4rem);
-        background: $color_10;
-        border-radius: 10px;
-        margin: 8rem auto 0;
-        img {
-            width: 1.4rem;
-        }
-        p {
-            @include font(Montserrat, normal, 600, 1.2rem, 100%, 0.05em, $color_white);
-            text-align: left;
-            margin-right: 1.2rem;
-        }
-    }
-}
-
 .container__button {
     display: block;
     @include wihi(18rem, 4rem);
@@ -138,8 +18,7 @@ h6 {
     border: 1px solid $color_10;
     border-radius: 10px;
     background-color: $color_white;
-
-    p {
+    .container__parag {
         @include font(Montserrat, normal, 600, 1.2rem, 110%, 0.05em, $color_10);
         text-transform: uppercase;
         margin: 0 auto;
@@ -148,8 +27,9 @@ h6 {
 .container__information {
     width: 90%;
     margin: 0 auto;
-    p {
+    .container__paragraph {
         @include font(Montserrat, normal, normal, 1.2rem, 170%, 0em, $color_4);
+        margin: 2rem auto;
     }
 }
 .color {
@@ -160,93 +40,4 @@ h6 {
     background-clip: text;
     -webkit-text-fill-color: transparent;
     margin-bottom: 2rem;
-}
-
-@media (max-width: 1296px) {
-    .container__items {
-        width: 90%;
-        margin-left: 4rem;
-        flex-wrap: wrap;
-    }
-    .container__wrap {
-        flex: 1 1 50% !important;
-        margin-bottom: 3rem;
-    }
-}
-
-@media (max-width: 820px) {
-    .container__items {
-        margin: 0 2rem !important;
-        flex-wrap: wrap;
-    }
-    .container__wrap {
-        flex: 1 0 17rem !important;
-        margin-bottom: 3rem;
-    }
-}
-@media (max-width: 710px) {
-    .container__items {
-        margin: 0 $pb !important;
-        display: block !important;
-    }
-    .container__wrap {
-        margin-bottom: 3rem !important;
-    }
-
-    .container__item > p {
-        @include font(Montserrat, normal, bold, $pw, 120%, 0em, $color_4);
-        margin: 0 $pw;
-        position: static !important;
-        top: 0 !important;
-    }
-    .container__item {
-        position: static !important;
-        opacity: 1 !important;
-        width: 22rem !important;
-        height: 32rem !important;
-        background-color: $color_white;
-        box-sizing: border-box;
-
-        button {
-            display: flex !important;
-            flex-direction: row;
-            justify-content: center;
-            align-items: center;
-            @include wihi(15rem, 4rem);
-            background: $color_10;
-            border-radius: 10px;
-            margin: 0 1rem;
-            img {
-                width: 1.4rem;
-            }
-            p {
-                @include font(Montserrat, normal, 600, 1.2rem, 100%, 0.05em, $color_white);
-                text-align: left;
-                margin-right: 1.2rem;
-            }
-        }
-    }
-    .container__item:hover {
-        @include wihi(18rem, 30rem);
-        background-color: $color_white;
-        box-sizing: border-box;
-        button {
-            display: flex;
-            flex-direction: row;
-            justify-content: center;
-            align-items: center;
-            @include wihi(15rem, 4rem);
-            background: $color_10;
-            border-radius: 10px;
-            margin: 0 1rem !important;
-            img {
-                width: 1.4rem;
-            }
-            p {
-                @include font(Montserrat, normal, 600, 1.2rem, 100%, 0.05em, $color_white);
-                text-align: left;
-                margin-right: 1.2rem;
-            }
-        }
-    }
 }
