--- a/src/app/Modules/search/search.component.html
+++ b/src/app/Modules/search/search.component.html
@@ -5,10 +5,11 @@
         <div class="container__search">
             <div class="p-input-icon-right">
                 <input type="text" class="p-inputtext-lg" pInputText placeholder="Enter your search request" />
-                <button><img src="../../../assets/img-home/search.png" alt="search"></button>
+                <button class="button"><img id="imgSearch" src="../../../assets/img-home/search.png"
+                        alt="search"></button>
             </div>
         </div>
         <div class="container__titles">Search results</div>
-        <p>The search results will appear here</p>
+        <p class="container__paragraph">The search results will appear here</p>
     </div>
 </div>
